@@ -1,3 +1,9 @@
+2000-11-22  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-util.h (g_file_test): Removed.
+
+	* Makefile.am: Use $(GNOMESUPPORT_INCS) and $(GNOMESUPPORT_LIBS).
+
 2000-09-28  Martin Baulig  <baulig@suse.de>
 
 	* gnome-history.[ch]: Moved to libcompat.
